# bookfix

./: .gitignore  CONTRIBUTING.md  README.md  bookfix.py  pyproject.toml  requirements.txt  test_bookfix.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/bookfix/: __init__.py
tests/: test_bookfix.py
